Add openapi swagger ui other endpoint
